[package]
name = "germinate"
description = "A templating library for injecting variables from multiple external sources"
version = "0.4.0"
authors = ["Iain Earl <iain@itmecho.com>"]
edition = "2018"
license = "GPL-3.0"
repository = "https://github.com/itmecho/germinate"
documentation = "https://docs.rs/germinate"
categories = ["template-engine"]
keywords = ["template"]
readme = "README.md"

[dependencies]
anyhow = "1.0.30"
async-trait = "0.1.31"
clap = "2.33.1"
mockito = "0.25.1"
native-tls = { version = "0.2", optional = true }
regex = "1.3.7"
rusoto_core = "0.43.0"
rusoto_ec2 = "0.43.0"
rusoto_mock = "0.43.0"
rusoto_ssm = "0.43.0"
surf = "1.0.3"
# TODO check if we can use a subset of features
tokio = { version = "0.2.21", features = ["full"] }

[features]
tls-vendored = ["native-tls/vendored"]
