[package]
name = "germinate"
description = "A templating library for injecting variables from multiple external sources"
version = "0.7.0"
authors = ["Iain Earl <iain@itmecho.com>"]
edition = "2018"
license = "GPL-3.0"
repository = "https://github.com/itmecho/germinate"
documentation = "https://docs.rs/germinate"
categories = ["template-engine"]
keywords = ["template"]
readme = "README.md"

[dependencies]
anyhow = "1.0.30"
async-trait = "0.1.36"
clap = "2.33.1"
native-tls = { version = "0.2", optional = true }
regex = "1.3.7"
rusoto_core = { version = "0.47.0", optional = true }
rusoto_ec2 = { version = "0.47.0", optional = true }
rusoto_ssm = { version = "0.47.0", optional = true }
surf = "2.2.0"
tokio = { version = ">= 1", features = ["full"] }

[dev-dependencies]
mockito = "0.30.0"
rusoto_mock = "0.47.0"

[features]
default = ["aws"]

aws = ["rusoto_core", "rusoto_ec2", "rusoto_ssm"]
tls-vendored = ["native-tls/vendored"]
